Zorba - The XQuery Processor


version 2.x

  * Fixed bug #867170 (Variables declared in Prolog are Overwritten inside the query)
  * New API EntityKind SOME_CONTENT
  * API StreamResource is able to specify whether a stream is seekable


version 2.5

New Features:
  * XQuery 3.0 functions
    - fn:available-environment-variables
    - fn:environment-variables
    - fn:uri-collection
    - fn:unparsed-text
    - fn:unparsed-text-available
    - fn:has-children#0
    - fn:nilled#0
    - fn:path
  * Added base64:decode#2 function which also does transcoding
  * Extended API for Python, Java, PHP and Ruby.
  * Add jvm classpath to zorbacmd and to Zorba API. Tracked by #931816
  * Added full-text module.
  * Added support for NO_ICU (to not use ICU for unicode processing)
  * Added XQJ support.
  * Added CollectionManager and DocumentManager support for XQJ.

Optimizations:
  * optimized insertion into a collection (don't copy it if the node was created by an element constructor
    and is not used anywhere else in the query

Bug Fixes/Other Changes:
  * Fixed bugs #931501 and #866987 (improved error messages for fn:format-number(). Additionally, the function now throws the FODF1310 error instead of XTDE1310, as the 3.0 spec requires)
  * Fixed bug 955170 (Catch clause with URILiteral-based wilcard NameTest)
  * Fixed memory leak in case of index truncation
  * Fixed bug #862971 (no error upon duplicate function declarations)
  * Fixed bug in mergeUpdates() method
  * Fixed bug 955135 (err:XQDY0044 not caught by try-catch expressions)
  * Fixed bug #986075 (encountering flwor expr with no clauses; due to common subexression being formed when inlining var in if-then-else expression) 
  * Fixed bug #967864 (var substitution did not update theFreeVars property)
  * Fixed bug #891650 (context size var not always declared within path expr)
  * Fixed bug #948879 (--uri-path doesn't work with fetch:content())